--- a/css/style.scss
+++ b/css/style.scss
@@ -55,6 +55,7 @@
     //font-family: "Permanent Marker";
     //font-family: "Mansalva";
     //font-family: "Fira Sans Condensed";
+    font-family: "Titillium Web";
 }
 
 .ft-default {
