--- a/css/style.scss
+++ b/css/style.scss
@@ -13,9 +13,11 @@ h1 {
     font-weight: bold;
 }
 
-.bg-image-default {
+.image-default {
     background-size: cover;
     background-position: center;
+    object-fit: cover;
+    object-position: center;
 }
 
 .bg-gd-black-transparent {
@@ -30,7 +32,8 @@ h1 {
     backdrop-filter: blur(0.7rem);
     -webkit-backdrop-filter: blur(0.7rem);
     //background: linear-gradient(31deg, #212121,black, black, #00000063, #0000002e);
-    background: linear-gradient(0deg, #2121218f, #00000063, #0000002e);
+    //background: linear-gradient(0deg, #2121218f, #00000063, #0000002e);
+    background: linear-gradient(0deg, #ffffff30, #00000063, #0000002e)
 }
 
 .border-frost {
@@ -126,5 +129,21 @@ h1 {
     + * {
         margin-top: -17em;
     }
+
+    > div {
+        font-size: 0.9em;
+
+        h2 {
+            font-family: 'Montserrat';
+            font-weight: 700;
+            font-size: 0.9em!important;
+        }
+
+        h3 {
+            font-size: 1.2em;
+            font-weight: bold;
+        }
+    }
+
 }
 
