--- a/css/style-breakpoints.scss
+++ b/css/style-breakpoints.scss
@@ -1,5 +1,6 @@
 ---
 ---
+
 .mw-sm {max-width: var(--bs-breakpoint-sm)!important;}
 .mw-md {max-width: var(--bs-breakpoint-md)!important;}
 .mw-lg {max-width: var(--bs-breakpoint-lg)!important;}
@@ -8,4 +9,28 @@
 
 .mg {
     width: calc(100% - var(--bs-gutter-x));
+}
+
+@media only screen and (max-width: 575px) {
+    .rounded-4-top-left-top-right {       
+        border-top-left-radius: var(--bs-border-radius-xl)!important;
+        border-top-right-radius: var(--bs-border-radius-xl)!important;
+    }
+    
+    .rounded-4-bottom-left-bottom-right {       
+        border-bottom-left-radius: var(--bs-border-radius-xl)!important;
+        border-bottom-right-radius: var(--bs-border-radius-xl)!important;
+    }
+}
+
+@media only screen and (min-width: 576px) {
+    .rounded-sm-4-top-right-bottom-right {       
+        border-top-right-radius: var(--bs-border-radius-xl)!important;
+        border-bottom-right-radius: var(--bs-border-radius-xl)!important;
+    }
+
+    .rounded-sm-4-top-left-bottom-left {       
+        border-top-left-radius: var(--bs-border-radius-xl)!important;
+        border-bottom-left-radius: var(--bs-border-radius-xl)!important;
+    }
 }
