--- a/css/style.scss
+++ b/css/style.scss
@@ -157,3 +157,9 @@ h1 {
 
 }
 
+.footer {
+    font-size: 0.8em!important;
+    font-weight: normal!important;
+    opacity: 60%;
+    letter-spacing: 0.2em;
+}
