--- a/_includes/highlights.html
+++ b/_includes/highlights.html
@@ -5,7 +5,7 @@
     </h2>
     <div class="row row-cols-1 row-cols-md-2">
 
-      {% assign search = site.pages | where_exp: "item", "item.highlight == true" | sort: "item.highlight-sort" %}
+      {% assign search = site.pages | where: "highlight", true | sort: "highlight-sort" %}
       {% for p in search %}
 
       <div class="col my-2">
