--- a/_includes/nav-right.html
+++ b/_includes/nav-right.html
@@ -4,4 +4,4 @@
     <a class="nav-link text-uppercase fs-6 fw-bold ms-lg-3 ps-5 ps-md-3 pe-0 py-3 py-md-0 rounded"
         href="{{p.url}}">{{p.nav-title}}</a>
   </li>
-{% endfor %}x 
+{% endfor %}
