--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,7 @@
             </p>
         </div>
         <div class="col text-center g-0">
-            <p class="py-3">Copyright &copy; 2023 {{site.title}}. All rights reserved.</p>
+            <p class="py-3">Copyright &copy; 2023 {{site.title}}. <br/>All rights reserved.</p>
         </div>
     </div>
 </div>
