--- a/css/style.scss
+++ b/css/style.scss
@@ -163,3 +163,17 @@ h1 {
     opacity: 60%;
     letter-spacing: 0.2em;
 }
+
+.fa {
+    color: #333;
+    text-decoration: none;
+    padding: 0.3em;
+    background-color: gray;
+    border-radius: 1em;
+    width: 1.5em;
+    text-align: center;
+
+    :hover {
+        background-color: white;
+    }
+}
