--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,25 +1,21 @@
 <div class="container mw-md text-light p-5 footer">
     <div class="row g-0">
-        <div class="row col-sm-6 col-md-9 text-center text-md-start g-0 pb-3">
+        <div class="row col-sm-6 col-md-8 text-center oldtext-md-start g-0 pb-3">
             <p class="text-uppercase fw-bold py-3">Quick Links</p>
             <div class="col-md-6 g-0">
-                <ul class="navbar-nav">
-                    {% assign sorted_pages = site.pages | where:"sitemap", "left" | sort: "sitemap-sort" %}
-                    {% for p in sorted_pages %}
-                    <li class="nav-item"><a class="nav-link py-1" href="{{p.url}}">{{p.sitemap-heading}}</a></li>
-                    {% endfor %}
-                </ul>
+                {% assign sorted_pages = site.pages | where:"sitemap", "left" | sort: "sitemap-sort" %}
+                {% for p in sorted_pages %}
+                <p><a class="py-1 text-white text-decoration-none" href="{{p.url}}">{{p.sitemap-heading}}</a></p>
+                {% endfor %}
             </div>
             <div class="col-md-6 g-0">
-                <ul class="navbar-nav">
-                    {% assign sorted_pages = site.pages | where:"sitemap", "right" | sort: "sitemap-sort" %}
-                    {% for p in sorted_pages %}
-                    <li class="nav-item"><a class="nav-link py-1" href="{{p.url}}">{{p.sitemap-heading}}</a></li>
-                    {% endfor %}
-                </ul>
+                {% assign sorted_pages = site.pages | where:"sitemap", "right" | sort: "sitemap-sort" %}
+                {% for p in sorted_pages %}
+                <p><a class="py-1 text-white text-decoration-none" href="{{p.url}}">{{p.sitemap-heading}}</a></p>
+                {% endfor %}
             </div>
         </div>
-        <div class="col-sm-6 col-md-3 text-center text-md-start g-0 pb-3">
+        <div class="col-sm-6 col-md-4 text-center toldext-md-start g-0 pb-3">
             <p class="text-uppercase fw-bold py-3">Stay in Touch</p>
             <p>Follow us on:</p>
             <p>
