--- a/css/style.scss
+++ b/css/style.scss
@@ -177,3 +177,16 @@ h1 {
         background-color: white;
     }
 }
+
+.breadcrumb {
+    .breadcrumb-item, a,
+    .breadcrumb-item::before {
+        color: white;
+    }
+}
+
+.liquid-content {
+    sh1 {
+        font-size: 1rem;
+    }
+}
