--- a/css/style-breakpoints.scss
+++ b/css/style-breakpoints.scss
@@ -34,3 +34,8 @@
         border-bottom-left-radius: var(--bs-border-radius-xl)!important;
     }
 }
+
+.page-image {
+    @media only screen and (max-width: 575px){ height: 200px!important; }
+    @media only screen and (min-width: 576px){ height: 300px!important; }
+}
