--- a/css/style-breakpoints.scss
+++ b/css/style-breakpoints.scss
@@ -41,7 +41,7 @@
         columns: 2;
         //margin-top: 1.5em;
 
-        h1, h2 {
+        h1, h2, .row, hr {
             column-span: all;
         }
 
