--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -2,7 +2,7 @@
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
 {% assign crumbs = page.url | remove:'/index.html' | split: '/' %}
-<li class="breadcrumb-item"><a href="{{ site.baseurl }}">Home</a></li>
+<li class="breadcrumb-item"><a href="/">Home</a></li>
 {% for crumb in crumbs offset: 1 %}
   {% if forloop.last %}
     {% unless include.hidelast == true %}<li class="breadcrumb-item active" aria-current="page">{{ page.breadcrumbs-title }}</li>{% endunless %}
