--- a/css/style.scss
+++ b/css/style.scss
@@ -182,6 +182,8 @@ h1 {
     .breadcrumb-item, a,
     .breadcrumb-item::before {
         color: white;
+        text-transform: uppercase;
+        font-size: 0.9em;
     }
 }
 
@@ -189,4 +191,12 @@ h1 {
     sh1 {
         font-size: 1rem;
     }
+}
+
+.row, hr {
+    column-span: all;
+}
+
+.column-span-all {
+    column-span: all;
 }
