--- a/css/style.scss
+++ b/css/style.scss
@@ -162,6 +162,7 @@ h1 {
     font-weight: normal!important;
     opacity: 60%;
     letter-spacing: 0.2em;
+    background: linear-gradient(0deg, #602b66,  black);
 }
 
 .fa {
