--- a/css/style-breakpoints.scss
+++ b/css/style-breakpoints.scss
@@ -21,6 +21,10 @@
         border-bottom-left-radius: var(--bs-border-radius-xl)!important;
         border-bottom-right-radius: var(--bs-border-radius-xl)!important;
     }
+
+    .box-shadow-top {
+        box-shadow: 0px -1px 1px #ffffff7a;
+    }
 }
 
 @media only screen and (min-width: 576px) {
@@ -32,6 +36,10 @@
     .rounded-sm-4-top-left-bottom-left {       
         border-top-left-radius: var(--bs-border-radius-xl)!important;
         border-bottom-left-radius: var(--bs-border-radius-xl)!important;
+    }
+
+    .box-shadow-sm-top {
+        box-shadow: 0px -1px 1px #ffffff7a;
     }
 }
 
