--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -6,10 +6,10 @@
 <div class="container mw-lg pt-3 pt-lg-5 px-4">
   <div class="row">
     <div class="col-12 g-0 d-sm-none">
-      <img src="{{p.card-image}}" class="w-100 h-100 image-default rounded-4-top-left-top-right" alt="...">
+      <img src="{{p.card-image}}" class="w-100 h-100 image-default rounded-4-top-left-top-right box-shadow-top" alt="...">
     </div>
     <div
-      class="col-12 col-sm-6 bg-dark rounded-4-bottom-left-bottom-right rounded-sm-4-top-left-bottom-left p-5 p-sm-5">
+      class="col-12 col-sm-6 bg-dark rounded-4-bottom-left-bottom-right rounded-sm-4-top-left-bottom-left p-5 p-sm-5 box-shadow-sm-top">
       <h2 class="my-3 fs-4 fw-light">{{p.card-heading}}</h2>
       <h3 class="fs-5 fw-bold my-3">{{p.card-subheading}}</h3>
       <p class="fw-light">
@@ -20,7 +20,7 @@
       </p>
     </div>
     <div class="col-12 col-sm-6 g-0 d-none d-sm-block">
-      <img src="{{p.card-image}}" class="w-100 h-100 image-default rounded-sm-4-top-right-bottom-right" alt="...">
+      <img src="{{p.card-image}}" class="w-100 h-100 image-default rounded-sm-4-top-right-bottom-right box-shadow-sm-top" alt="...">
     </div>
   </div>
 </div>
@@ -32,10 +32,10 @@
     <div class="col-12 col-sm-6 g-0">
       <img
         src="{{p.card-image}}"
-        class="w-100 h-100 image-default rounded-4-top-left-top-right rounded-sm-4-top-left-bottom-left" alt="...">
+        class="w-100 h-100 image-default rounded-4-top-left-top-right rounded-sm-4-top-left-bottom-left box-shadow-top box-shadow-sm-top" alt="...">
     </div>
     <div
-      class="col-12 col-sm-6 bg-dark rounded-4-bottom-left-bottom-right rounded-sm-4-top-right-bottom-right p-5 p-sm-5">
+      class="col-12 col-sm-6 bg-dark rounded-4-bottom-left-bottom-right rounded-sm-4-top-right-bottom-right p-5 p-sm-5 box-shadow-sm-top">
       <h2 class="my-3 fs-4 fw-light">{{p.card-heading}}</h2>
       <h3 class="fs-5 fw-bold my-3">{{p.card-subheading}}</h3>
       <p class="fw-light">
