--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,10 @@ h1 {
     font-weight: bold;
 }
 
+h3 {
+    margin-top: 0.1em;
+}
+
 .image-default {
     background-size: cover;
     background-position: center;
