--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,7 +11,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto py-3 pb-5 py-sm-0">
+            <ul class="navbar-nav ms-auto mt-1 py-3 pb-5 py-sm-0">
                 {% include nav-right.html %}
             </ul>
         </div>
