--- a/css/style-breakpoints.scss
+++ b/css/style-breakpoints.scss
@@ -25,6 +25,10 @@
     .box-shadow-top {
         box-shadow: 0px -1px 1px #ffffff7a;
     }
+
+    .pills {
+        margin-top: 1em;
+    }
 }
 
 @media only screen and (min-width: 576px) {
@@ -61,6 +65,7 @@
         ul {
             break-inside: avoid;
         }
+
     }
 }
 
