Enhance hero section with new paragraph and styles
Updated hero section to include a new paragraph and modified button class.

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -10,8 +10,8 @@
             {{p.hero-subheading}}
           </a>
         </h2>
-        <p>
-          <a class="btn btn-outline-light mt-2" href="{{p.url}}" role="button">{{p.hero-button}}</a>
+        <p class="mt-3 fs-6 text-shadow">
+          {{p.hero-paragraph}}
         </p>
       </div>
     </div>
