--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -11,7 +11,10 @@
           </a>
         </h2>
         <p class="mt-3 fs-6 text-shadow">
-          {{p.hero-paragraph}}
+          {{p.hero-paragraph-1}}
+        </p>
+        <p class="mt-3 fs-6 text-shadow">
+          {{p.hero-paragraph-2}}
         </p>
       </div>
     </div>
