--- a/_includes/siblings.html
+++ b/_includes/siblings.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row sam-test">
     {% for sibling in site.pages | sort: "highlight-sort" %}
     {% if sibling.url contains page.url %}
       {% unless sibling.url == page.url %}
