--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,16 +16,13 @@
                     {% endfor %}
                 </div>
             </div>
-            <div class="col-sm-6 col-md-4 text-center toldext-md-start g-0 pb-3">
-                <p class="text-uppercase fw-bold py-3">Stay in Touch</p>
-                <p>Follow us on:</p>
+            <div class="col-sm-6 col-md-4 text-center text-md-start g-0 pb-3">
+                <p class="text-uppercase fw-bold py-3">Stay in touch</p>
+                <p>Professional writing and updates are shared on LinkedIn.</p>
                 <p>
-                    <a href="#" class="fa fa-facebook text-dark text-decoration-none"></a>
-                    <a href="#" class="fa fa-twitter"></a>
-                    <a href="#" class="fa fa-google"></a>
-                    <a href="#" class="fa fa-linkedin"></a>
-                    <a href="#" class="fa fa-youtube"></a>
-                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="https://www.linkedin.com/in/samnaseem/"
+                    class="fa fa-linkedin text-dark text-decoration-none"
+                    aria-label="LinkedIn"></a>
                 </p>
             </div>
             <div class="col text-center g-0">
