--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
                     {% endfor %}
                 </div>
             </div>
-            <div class="col-sm-6 col-md-4 oldtext-center text-md-start g-0 pb-3">
+            <div class="col-sm-6 col-md-4 text-center oldtext-md-start g-0 pb-3">
                 <p class="text-uppercase fw-bold py-3">Stay in touch</p>
 
                 <p class="mb-2">
