--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
                 </p>
 
                 <p class="mb-0">
-                    <a href="https://www.linkedin.com/in/YOURPROFILE"
+                    <a href="https://www.linkedin.com/in/samnaseem/"
                     class="text-decoration-none text-light d-inline-flex align-items-center gap-2"
                     target="_blank"
                     rel="noopener noreferrer"
