--- a/_includes/highlights.html
+++ b/_includes/highlights.html
@@ -1,6 +1,6 @@
 <div class="container mw-lg hero-followup">
   <div class="container mw-lg text-light p-4 py-sm-5 pb-1 pb-sm-5 px-sm-5 rounded-4 bg-frost box-shadow-top box-shadow-sm-top">
-    <h2 class="fs-6 text-uppercase text-white-50">Current Effort Highlights
+    <h2 class="fs-6 text-uppercase text-white-50">Architectural Practice Areas
       <!--<a class="d-none d-sm-block float-end text-light text-decoration-none fw-lighter" href="#">View More</a>-->
     </h2>
     <div class="row row-cols-1 row-cols-md-2">
