--- a/css/style.scss
+++ b/css/style.scss
@@ -166,7 +166,8 @@ h3 {
     font-weight: normal!important;
     opacity: 60%;
     letter-spacing: 0.2em;
-    background: linear-gradient(0deg, #602b66,  black);
+    //background: linear-gradient(0deg, #602b66,  black);
+    background: linear-gradient(0deg, #554026,  black);
 }
 
 .fa {
