--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
                 </p>
             </div>
             <div class="col text-center g-0">
-                <p class="py-3">Copyright &copy; 2026 {{site.title}}. <br/>All rights reserved.</p>
+                <p class="py-3">Copyright &copy; 2026 {{site.company}}. <br/>All rights reserved.</p>
             </div>
         </div>
     </div>
