--- a/_includes/va-footer.html
+++ b/_includes/va-footer.html
@@ -1,12 +1,12 @@
 <div class="container-fluid footer p-5">
-    <div class="container mw-md text-light">
+    <div class="container mw-md">
         <div class="row g-0">
             <div class="row col-sm-6 col-md-12 text-center oldtext-md-start g-0 pb-3">
                 <p class="text-uppercase fw-bold py-3">Sitemap</p>
                 <div class="col-md-6 g-0">
                     {% assign sorted_pages = site.pages | where:"va-sitemap", "left" | sort: "va-sitemap-sort" %}
                     {% for p in sorted_pages %}
-                    <p><a class="py-1 text-white text-decoration-none" href="{{p.url}}">{{p.va-sitemap-heading}}</a></p>
+                    <p><a class="py-1 text-decoration-none" href="{{p.url}}">{{p.va-sitemap-heading}}</a></p>
                     {% endfor %}
                 </div>
                 <div class="col-md-6 g-0">
