--- a/_includes/va-footer.html
+++ b/_includes/va-footer.html
@@ -6,13 +6,13 @@
                 <div class="col-md-6 g-0">
                     {% assign sorted_pages = site.pages | where:"va-sitemap", "left" | sort: "va-sitemap-sort" %}
                     {% for p in sorted_pages %}
-                    <p><a class="py-1 text-decoration-none" href="{{p.url}}">{{p.va-sitemap-heading}}</a></p>
+                    <p><a class="py-1 text-dark text-decoration-none" href="{{p.url}}">{{p.va-sitemap-heading}}</a></p>
                     {% endfor %}
                 </div>
                 <div class="col-md-6 g-0">
                     {% assign sorted_pages = site.pages | where:"va-sitemap", "right" | sort: "va-sitemap-sort" %}
                     {% for p in sorted_pages %}
-                    <p><a class="py-1 text-white text-decoration-none" href="{{p.url}}">{{p.va-sitemap-heading}}</a></p>
+                    <p><a class="py-1 text-dark text-decoration-none" href="{{p.url}}">{{p.va-sitemap-heading}}</a></p>
                     {% endfor %}
                 </div>
             </div>
