--- a/css/va-style.scss
+++ b/css/va-style.scss
@@ -17,6 +17,15 @@ h3 {
     margin-top: 0.1em;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+hr {
+    margin: 3rem 0;
+}
+
 .image-default {
     background-size: cover;
     background-position: center;
