--- a/_includes/va-footer.html
+++ b/_includes/va-footer.html
@@ -1,4 +1,4 @@
-<div class="container-fluid footer p-5">
+<div class="container-fluid footer pb-5">
     <div class="container mw-md">
         <div class="row g-0">
             <div class="row col-sm-6 col-md-12 text-center oldtext-md-start g-0 pb-3">
