--- a/css/va-style-breakpoints.scss
+++ b/css/va-style-breakpoints.scss
@@ -49,8 +49,8 @@
 
 @media only screen and (min-width: 768px) {
     .columns {
-        columns: auto;
-        columns: 2;
+        //columns: auto;
+        //columns: 2;
         //margin-top: 1.5em;
 
         h1, h2 {
