--- a/_includes/co-nav.html
+++ b/_includes/co-nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top fixed-top-p bg-gd-black-transparent">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top fixed-top-p bg-gd-black-transparent">
     <div class="container mw-lg pt-2">
         <!-- Brand/logo -->
         <a class="navbar-brand text-white ms-2 me-auto" href="/">
