--- a/css/co-style.scss
+++ b/css/co-style.scss
@@ -113,7 +113,7 @@ hr {
             font-size: 0.7em!important;
             font-weight: normal!important;
             opacity: 90%;
-            //letter-spacing: 0.3em; //0.4em;
+            letter-spacing: 0.3em; //0.4em;
             margin-left: 0.5em;
         }
     //}
